update README.md to enhance project description and add new badges for Java, Spring Boot, and JavaFX